# citam

./: CMakeLists.txt  org.kde.citam.desktop  org.kde.citam.json  org.kde.citam.metainfo.xml
android/: AndroidManifest.xml  build.gradle  version.gradle.in
src/: CMakeLists.txt  app.cpp  app.h  citamconfig.kcfg  citamconfig.kcfgc  controller.cpp  controller.h  main.cpp  resources.qrc
src/constants/: constants.h
src/contents/ui/: About.qml  AddStudentForm.qml  AddUserForm.qml  ClassEditForm.qml  ClassManagementPage.qml  Home.qml  Login.qml  StudentForm.qml  StudentManagementPage.qml  StudentViewPage.qml  TeacherManagementPage.qml  main.qml
src/controllers/: classcontroller.cpp  classcontroller.h  logincontroller.cpp  logincontroller.h  studentcontroller.cpp  studentcontroller.h
src/models/: user.cpp  user.h
src/services/: classservice.cpp  classservice.h  service.cpp  service.h  studentservice.cpp  studentservice.h  userservice.cpp  userservice.h
